--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#portfolio">portfolio</a></li>
                     <li><a href="#Blogs">Blogs</a></li>
                     <li><a href="#Contact">Contact</a></li>
-                    <li><a href=""><BUtton class="cta">Login</BUtton></a></li>
+                    <li><a href="login.html"><BUtton class="cta">Login</BUtton></a></li>
                 </ul>
     
             </nav>
@@ -75,19 +75,19 @@
         <div class="flex-box">
             <h4>Web developer</h4>
         </div>
-        <div class="flex-box">
+        <!-- <div class="flex-box">
         <h4>Digital Markerting</h4>
-        </div>
+        </div> -->
         <div class="flex-box">
             <h4>Mobile development</h4>
         </div>
-        <div class="flex-box">
+        <!-- <div class="flex-box">
             <h4>IOT</h4>
-        </div>
-        <div class="flex-box">
+        </div> -->
+        <!-- <div class="flex-box">
             <H4>Project management
             </H4>
-        </div>
+        </div> -->
        </div>
     </section>
 
@@ -129,7 +129,7 @@
         <div class="blog-post">
             <img src="./images/blog 3.png" alt="Blog Post Image">
             <h2>Get a domain</h2>
-            <p>Give your blog the perfect home. Get a blogspot.com domain or buy a custom domain with just a few clicks.</p>
+            <p>Give your blog the perfect home. Get a blogspot.com domain or buy a custom domain with just a few clicks.Give your blog the perfect home. Get a blogspot. design something new</p>
             <div class="actions">
                 <i class="fa fa-heart"></i>
                 <i class="fa fa-envelope"></i>
