--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar">
             <h1 class="logo">Nicole .</h1>
 
-            <nav>
+            <nav class="nav-bar">
                 <ul>
                     <li> <a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -46,7 +46,7 @@
             <a style="color: #ff6e00;" href="#" class="social-icon"><i class="fa fa-instagram"></i></a></p>
             
             
-            <button class="cta"><a href="#">Let's Connect</a></button>
+            <button class="cta"><a href="login.html">Let's Connect</a></button>
         </div>
         <div class="content-right">
             <img class="home-image" src="./images/nicole.png" alt="Your Picture">
@@ -93,7 +93,7 @@
 
     <!-- -----------MY WORK------------- -->
 
-    <section id="portfolio">
+    <section id="portfolio" class="portfolio">
         <h2 style="text-align: center;">Portfolio</h2>
         <div class="content-portfolio">
             <div class="portfolio-post">
