--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
             <ul class="social">
                 <span >login with:</span>
                 <li><i class="fa fa-google"></i></li>
-                <li><i class="fa fa-github"></i></li> or <span style=""><a href="signIn.html" >Register</a></span>  
+                <li><i class="fa fa-github"></i></li> or <span ><a href="signIn.html" >Register</a></span>  
             </ul>
         </div>
        </div>
