--- a/signIn.html
+++ b/signIn.html
@@ -52,7 +52,7 @@
             <ul class="social">
                 <span >Register with:</span>
                 <li><i class="fa fa-google"></i></li>
-                <li><i class="fa fa-github"></i></li> or <span style=""><a href="login.html" >Already have account</a></span>  
+                <li><i class="fa fa-github"></i></li> or <span><a href="login.html" >Already have account</a></span>  
             </ul>
         </div>
        </div>
