done with the dashboard

--- a/signIn.html
+++ b/signIn.html
@@ -54,10 +54,10 @@
             <h1 style="text-align: center;">Register</h1>
             <form action="">
                 <div class="tbox">
-                    <i class="fa fa-user"></i> <input type="email" name="" id="" placeholder="Email">
+                    <i class="fa fa-user"></i> <input type="email" name="" id="" placeholder="Email" required>
                 </div>
                 <div class="tbox">
-                    <i class="fa fa-lock"></i> <input type="password" name="" id="" placeholder="Password">
+                    <i class="fa fa-lock"></i> <input type="password" name="" id="" placeholder="Password" required>
                 </div>
                 <button class="cta">Register</button>
             </form>
