--- a/dashbaord.html
+++ b/dashbaord.html
@@ -24,29 +24,29 @@
             <div class="side-menu">
                 <ul>
                     <li>
-                       <a href="" class="active">
+                       <a href="dashbaord.html" class="active">
                             <span class="las la-home"></span>
                             <small>Dashboard</small>
                         </a>
                     </li>
-                    <li>
-                       <a href="">
-                            <span class="las la-user-alt"></span>
-                            <small>Profile</small>
-                        </a>
-                    </li>
                    
-                       <a href="">
+                       <a href="users.html">
                             <span class="las la-user-alt"></span>
                             <small>Users</small>
                         </a>
                     </li>
                     <li>
-                       <a href="">
+                       <a href="blogs.html">
                             <span class="las la-envelope"></span>
                             <small>Blogs</small>
                         </a>
                     </li>
+                    <li>
+                        <a href="roject.html">
+                             <span class="las la-briefcase"></span>
+                             <small>Projects</small>
+                         </a>
+                     </li>
                 
 
                 </ul>
