--- a/login.html
+++ b/login.html
@@ -51,14 +51,14 @@
         </div>
         <div class="loginForm">
             <h1 style="text-align: center;">Login</h1>
-            <form action="">
+            <form action="" class="myForm" onsubmit="return validateForm()" >
                 <div class="tbox">
-                    <i class="fa fa-user"></i> <input type="email" name="" id="" placeholder="Email">
+                    <i class="fa fa-user"></i> <input type="email" name="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="tbox">
-                    <i class="fa fa-lock"></i> <input type="password" name="" id="" placeholder="Password">
+                    <i class="fa fa-lock"></i> <input type="password" name="password" id="password" placeholder="Password" required>
                 </div>
-                <button class="cta">Login</button>
+                <button type="submit" class="cta" id="submit" >Login</button>
             </form>
             <ul class="social">
                 <span >login with:</span>
@@ -70,6 +70,7 @@
     </div>
 
     <script>
+
         function showSidebar(){
             const sidebar = document.querySelector('.sidebar')
             sidebar.style.display = 'flex'
@@ -78,6 +79,8 @@
             const sidebar = document.querySelector('.sidebar')
             sidebar.style.display = 'none'
         }
+  
+
     </script>
 </body>
 </html>
